cluster/monitoring/manifests/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.home`)
      kind: Rule
      services:
        - name: prometheus-grafana
          port: 80

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.home`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
